--- a/creduce/creduce.in
+++ b/creduce/creduce.in
@@ -788,19 +788,19 @@ my @all_methods = (
     { "name" => "pass_balanced", "arg" => "square-only",            "pri" => 163,  },
     { "name" => "pass_balanced", "arg" => "parens-to-zero",         "pri" => 9000,  "first_pass_pri" => 44 },
 
-    { "name" => "pass_clang",    "arg" => "remove-namespace",       "pri" => 200,  },
+    #{ "name" => "pass_clang",    "arg" => "remove-namespace",       "pri" => 200,  },
     { "name" => "pass_clang",    "arg" => "aggregate-to-scalar",    "pri" => 201,  },
    #{ "name" => "pass_clang",    "arg" => "binop-simplification",   "pri" => 201,  },
-    { "name" => "pass_clang",    "arg" => "local-to-global",        "pri" => 9500,  },
-    { "name" => "pass_clang",    "arg" => "param-to-global",        "pri" => 203,  },
+   #{ "name" => "pass_clang",    "arg" => "local-to-global",        "pri" => 9500,  },
+   #{ "name" => "pass_clang",    "arg" => "param-to-global",        "pri" => 203,  },
     { "name" => "pass_clang",    "arg" => "param-to-local",         "pri" => 204,  },
     { "name" => "pass_clang",    "arg" => "remove-nested-function", "pri" => 205,  },
     { "name" => "pass_clang",    "arg" => "rename-fun",                            "last_pass_pri" => 207,  },
     { "name" => "pass_clang",    "arg" => "union-to-struct",        "pri" => 208,  },
     { "name" => "pass_clang",    "arg" => "rename-param",                          "last_pass_pri" => 209,  },
     { "name" => "pass_clang",    "arg" => "rename-var",                            "last_pass_pri" => 210,  },
-    { "name" => "pass_clang",    "arg" => "rename-class",                          "last_pass_pri" => 211,  },
-    { "name" => "pass_clang",    "arg" => "rename-cxx-method",                     "last_pass_pri" => 212,  },
+    #{ "name" => "pass_clang",    "arg" => "rename-class",                          "last_pass_pri" => 211,  },
+    #{ "name" => "pass_clang",    "arg" => "rename-cxx-method",                     "last_pass_pri" => 212,  },
     { "name" => "pass_clang",    "arg" => "return-void",            "pri" => 212,  },
     { "name" => "pass_clang",    "arg" => "simple-inliner",         "pri" => 213,  },
     { "name" => "pass_clang",    "arg" => "reduce-pointer-level",   "pri" => 214,  },
@@ -823,20 +823,20 @@ my @all_methods = (
     { "name" => "pass_clang",    "arg" => "replace-dependent-typedef",     "pri" => 231,  },
     { "name" => "pass_clang",    "arg" => "replace-one-level-typedef-type",     "pri" => 232,  },
     { "name" => "pass_clang",    "arg" => "remove-unused-field",    "pri" => 233,  },
-    { "name" => "pass_clang",    "arg" => "instantiate-template-type-param-to-int",  "pri" => 234,  },
-    { "name" => "pass_clang",    "arg" => "instantiate-template-param",    "pri" => 235,  },
-    { "name" => "pass_clang",    "arg" => "template-arg-to-int",    "pri" => 236,  },
-    { "name" => "pass_clang",    "arg" => "template-non-type-arg-to-int", "pri" => 237,  },
-    { "name" => "pass_clang",    "arg" => "reduce-class-template-param",  "pri" => 238,  },
-    { "name" => "pass_clang",    "arg" => "remove-trivial-base-template", "pri" => 239,  },
-    { "name" => "pass_clang",    "arg" => "class-template-to-class",      "pri" => 240,  },
-    { "name" => "pass_clang",    "arg" => "remove-base-class",      "pri" => 241,  },
-    { "name" => "pass_clang",    "arg" => "replace-derived-class",  "pri" => 242,  },
-    { "name" => "pass_clang",    "arg" => "remove-unresolved-base", "pri" => 243,  },
-    { "name" => "pass_clang",    "arg" => "remove-ctor-initializer","pri" => 244,  },
-    { "name" => "pass_clang",    "arg" => "replace-class-with-base-template-spec","pri" => 245,  },
-    { "name" => "pass_clang",    "arg" => "simplify-nested-class",  "pri" => 246,  },
-    { "name" => "pass_clang",    "arg" => "remove-unused-outer-class",    "pri" => 247,  },
+    #{ "name" => "pass_clang",    "arg" => "instantiate-template-type-param-to-int",  "pri" => 234,  },
+    #{ "name" => "pass_clang",    "arg" => "instantiate-template-param",    "pri" => 235,  },
+    #{ "name" => "pass_clang",    "arg" => "template-arg-to-int",    "pri" => 236,  },
+    #{ "name" => "pass_clang",    "arg" => "template-non-type-arg-to-int", "pri" => 237,  },
+    #{ "name" => "pass_clang",    "arg" => "reduce-class-template-param",  "pri" => 238,  },
+    #{ "name" => "pass_clang",    "arg" => "remove-trivial-base-template", "pri" => 239,  },
+    #{ "name" => "pass_clang",    "arg" => "class-template-to-class",      "pri" => 240,  },
+    #{ "name" => "pass_clang",    "arg" => "remove-base-class",      "pri" => 241,  },
+    #{ "name" => "pass_clang",    "arg" => "replace-derived-class",  "pri" => 242,  },
+    #{ "name" => "pass_clang",    "arg" => "remove-unresolved-base", "pri" => 243,  },
+    #{ "name" => "pass_clang",    "arg" => "remove-ctor-initializer","pri" => 244,  },
+    #{ "name" => "pass_clang",    "arg" => "replace-class-with-base-template-spec","pri" => 245,  },
+    #{ "name" => "pass_clang",    "arg" => "simplify-nested-class",  "pri" => 246,  },
+    #{ "name" => "pass_clang",    "arg" => "remove-unused-outer-class",    "pri" => 247,  },
     { "name" => "pass_clang",    "arg" => "empty-struct-to-int",    "pri" => 248,  },
     { "name" => "pass_clang",    "arg" => "remove-pointer",         "pri" => 249,  },
     { "name" => "pass_clang",    "arg" => "reduce-pointer-pairs",   "pri" => 250,  },
@@ -847,12 +847,12 @@ my @all_methods = (
     { "name" => "pass_clang",    "arg" => "replace-array-index-var",      "pri" => 255,  },
     { "name" => "pass_clang",    "arg" => "replace-array-access-with-index",     "pri" => 256,  },
     { "name" => "pass_clang",    "arg" => "replace-dependent-name", "pri" => 257,  },
-    { "name" => "pass_clang",    "arg" => "simplify-recursive-template-instantiation",       "pri" => 258, },
+    #{ "name" => "pass_clang",    "arg" => "simplify-recursive-template-instantiation",       "pri" => 258, },
     { "name" => "pass_clang",    "arg" => "vector-to-array",        "pri" => 259   },    
-    { "name" => "pass_clang",    "arg" => "combine-global-var",                    "last_pass_pri" => 990, },
+    #{ "name" => "pass_clang",    "arg" => "combine-global-var",                    "last_pass_pri" => 990, },
     { "name" => "pass_clang",    "arg" => "combine-local-var",                     "last_pass_pri" => 991, },
     { "name" => "pass_clang",    "arg" => "simplify-struct-union-decl",            "last_pass_pri" => 992, },
-    { "name" => "pass_clang",    "arg" => "move-global-var",                       "last_pass_pri" => 993, },
+    #{ "name" => "pass_clang",    "arg" => "move-global-var",                       "last_pass_pri" => 993, },
     { "name" => "pass_clang",    "arg" => "unify-function-decl",                   "last_pass_pri" => 994, },
     { "name" => "pass_peep",     "arg" => "a",                      "pri" => 9500,  },
     { "name" => "pass_peep",     "arg" => "c",                      "pri" => 9500,  },
